Test Swagger for Driver API
